# Pingus - A free Lemmings clone
# Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

pkgdatadir = $(datadir)/games/@PACKAGE@/images

nobase_pkgdata_DATA = backgrounds/large_star.png \
backgrounds/middle_star.png \
backgrounds/small_star.png \
backgrounds/starfield_icon.png \
core/buttons/armageddon_anim.png \
core/buttons/buttonbackground.png \
core/buttons/buttonbackgroundhl.png \
core/buttons/fast_forward.png \
core/buttons/hbuttonbg.png \
core/buttons/hbuttonbgb.png \
core/buttons/info.png \
core/buttons/pause.png \
core/cursors/animcross.png \
core/cursors/arrow_left.png \
core/cursors/arrow_right.png \
core/cursors/cap.png \
core/cursors/capture.png \
core/cursors/capwrong.png \
core/cursors/cross.png \
core/cursors/cursor.png \
core/cursors/editor.png \
core/cursors/scroll.png \
core/editor/actions.png \
core/editor/button.png \
core/editor/button_pressed.png \
core/editor/home.png \
core/editor/logo.png \
core/editor/region-zoom.png \
core/editor/start_pos.png \
core/editor/tb_clock_run.png \
core/editor/tb_copy.png \
core/editor/tb_edit.png \
core/editor/tb_exit.png \
core/editor/tb_help.png \
core/editor/tb_index.png \
core/editor/tb_new.png \
core/editor/tb_open.png \
core/editor/tb_preferences.png \
core/editor/tb_save.png \
core/editor/tb_trash.png \
core/editor/weather_rain.png \
core/editor/weather_snow.png \
core/editor/zoom-in.png \
core/editor/zoom-out.png \
core/menu/create_on.png \
core/menu/credits_on.png \
core/menu/exit_button_hover.png \
core/menu/exit_button_normal.png \
core/menu/exit_button_pressed.png \
core/menu/exit_menu.png \
core/menu/exit_on.png \
core/menu/layer1.jpg \
core/menu/layer1.png \
core/menu/layer2.png \
core/menu/layer3.png \
core/menu/layer4.png \
core/menu/layer5.png \
core/menu/multi_on.png \
core/menu/options_on.png \
core/menu/play_on.png \
core/menu/startscreenbg.jpg \
core/menu/worldscreenbg.jpg \
core/misc/404.png \
core/misc/chalk_pingu1.png \
core/misc/chalk_pingu2.png \
core/misc/chalk_pingu3.png \
core/misc/chalk_pingu4.png \
core/misc/creditpingu.png \
core/misc/flag0.png \
core/misc/flag1.png \
core/misc/flag2.png \
core/misc/flag3.png \
core/misc/infinity.png \
core/misc/loading.png \
core/misc/logo.png \
core/misc/next.png \
core/misc/next_hover.png \
core/misc/pingubw.png \
core/misc/smallmap_entrance.png \
core/misc/smallmap_exit.png \
core/misc/start_back.png \
core/misc/start_back_clicked.png \
core/misc/start_back_hover.png \
core/misc/start_ok.png \
core/misc/start_ok_clicked.png \
core/misc/start_ok_hover.png \
core/misc/unplayable.png \
core/misc/unplayable2.png \
core/worldmap/arrow.png \
core/worldmap/credits_button_hover.png \
core/worldmap/credits_button_normal.png \
core/worldmap/credits_button_pressed.png \
core/worldmap/dot_green.png \
core/worldmap/dot_green_hl.png \
core/worldmap/dot_invalid.png \
core/worldmap/dot_red.png \
core/worldmap/dot_red_hl.png \
core/worldmap/enter_button_hover.png \
core/worldmap/enter_button_normal.png \
core/worldmap/enter_button_pressed.png \
core/worldmap/flaggreen.png \
core/worldmap/leave_button_hover.png \
core/worldmap/leave_button_normal.png \
core/worldmap/leave_button_pressed.png \
core/worldmap/levelname_bg.png \
core/worldmap/pingus.png \
core/worldmap/pingus_standing.png \
core/worldmap/story_button_hover.png \
core/worldmap/story_button_normal.png \
core/worldmap/story_button_pressed.png \
core/worldmap/tube.png \
entrances/cloudent.png \
entrances/entrance.png \
entrances/eyes_entrance.png \
entrances/eyes_entrance_anim.png \
entrances/eyes_underlay.png \
entrances/generic.png \
entrances/industrial.png \
entrances/industrial_top.png \
entrances/snow_back.png \
entrances/snow_front.png \
entrances/space.png \
entrances/wood_bottom.png \
entrances/wood_top.png \
entrances/woodthing_mov.png \
entrances/woodthing_nmov.png \
exits/crystal.png \
exits/desert_tut.png \
exits/desertexit.png \
exits/ice.png \
exits/ice2.png \
exits/industrial.png \
exits/mud.png \
exits/ordina.png \
exits/sortie.png \
exits/sortie_anim.png \
exits/space.png \
exits/stone.png \
exits/sweetexit.png \
fonts/chalk_large.png \
fonts/chalk_normal.png \
fonts/chalk_small.png \
fonts/courier_small2.png \
fonts/number_fnt.png \
fonts/pingus2.png \
fonts/pingus4.png \
fonts/pingus_small3.png \
fonts/pingus_small4.png \
fonts/pingus_small4_fix_num.png \
fonts/smallfont.png \
fonts/smallfont_h.png \
fonts/xterm.png \
groundpieces/bridge/misc/bridge_left.png \
groundpieces/bridge/misc/bridge_right.png \
groundpieces/bridge/space/grid1.png \
groundpieces/bridge/space/grid2.png \
groundpieces/bridge/space/grid3.png \
groundpieces/ground/crystal/block.png \
groundpieces/ground/crystal/column.png \
groundpieces/ground/crystal/diagcrystal.png \
groundpieces/ground/crystal/hexcrystal.png \
groundpieces/ground/crystal/horiz.png \
groundpieces/ground/crystal/horiz2.png \
groundpieces/ground/crystal/pipe.png \
groundpieces/ground/crystal/pipeend.png \
groundpieces/ground/crystal/platform.png \
groundpieces/ground/crystal/platform2.png \
groundpieces/ground/crystal/pointleft.png \
groundpieces/ground/crystal/pointright.png \
groundpieces/ground/crystal/skinnycrystal.png \
groundpieces/ground/crystal/smcrystal.png \
groundpieces/ground/crystal/tesselate.png \
groundpieces/ground/desert/bigblock-broken1.png \
groundpieces/ground/desert/bigblock-broken2.png \
groundpieces/ground/desert/bigblock-broken3.png \
groundpieces/ground/desert/bigdune1.png \
groundpieces/ground/desert/bigprickpiece.png \
groundpieces/ground/desert/bigsand.png \
groundpieces/ground/desert/blobdune.png \
groundpieces/ground/desert/column.png \
groundpieces/ground/desert/column_piece1.png \
groundpieces/ground/desert/column_piece2.png \
groundpieces/ground/desert/column_piece3.png \
groundpieces/ground/desert/domedune.png \
groundpieces/ground/desert/flat.png \
groundpieces/ground/desert/flatdune.png \
groundpieces/ground/desert/leftsmallbrick.png \
groundpieces/ground/desert/leftsmallsand.png \
groundpieces/ground/desert/mediumsand.png \
groundpieces/ground/desert/middleprickpiece.png \
groundpieces/ground/desert/peakdune.png \
groundpieces/ground/desert/pillar1.png \
groundpieces/ground/desert/pillar2.png \
groundpieces/ground/desert/pillar3.png \
groundpieces/ground/desert/platform.png \
groundpieces/ground/desert/platform_left.png \
groundpieces/ground/desert/platform_right.png \
groundpieces/ground/desert/rightsmallbrick.png \
groundpieces/ground/desert/rightsmallsand.png \
groundpieces/ground/desert/sluggydu.png \
groundpieces/ground/desert/smallbrickpiece.png \
groundpieces/ground/desert/smallsand.png \
groundpieces/ground/foliage/flax1.png \
groundpieces/ground/foliage/flax2.png \
groundpieces/ground/foliage/midtree1.png \
groundpieces/ground/foliage/midtree2.png \
groundpieces/ground/foliage/oak1.png \
groundpieces/ground/foliage/rock1.png \
groundpieces/ground/foliage/rock2.png \
groundpieces/ground/foliage/rock3.png \
groundpieces/ground/foliage/rock4.png \
groundpieces/ground/foliage/rock5.png \
groundpieces/ground/foliage/rock6.png \
groundpieces/ground/foliage/smallbush.png \
groundpieces/ground/foliage/smallbush2.png \
groundpieces/ground/foliage/smallbush3.png \
groundpieces/ground/foliage/talltree.png \
groundpieces/ground/green/piece1.png \
groundpieces/ground/green/piece2.png \
groundpieces/ground/green/piece3.png \
groundpieces/ground/industrial/pipe1.png \
groundpieces/ground/industrial/pipe2.png \
groundpieces/ground/industrial/pipe3.png \
groundpieces/ground/industrial/pipe4.png \
groundpieces/ground/industrial/pipe5.png \
groundpieces/ground/industrial/pipe6.png \
groundpieces/ground/industrial/pipe7.png \
groundpieces/ground/industrial/pipe8.png \
groundpieces/ground/industrial/pipe_bl.png \
groundpieces/ground/industrial/pipe_br.png \
groundpieces/ground/industrial/pipe_ul.png \
groundpieces/ground/industrial/pipe_ur.png \
groundpieces/ground/jungle/branch1.png \
groundpieces/ground/jungle/branch2.png \
groundpieces/ground/jungle/branch3.png \
groundpieces/ground/jungle/branch4.png \
groundpieces/ground/jungle/branch5.png \
groundpieces/ground/jungle/branch6.png \
groundpieces/ground/jungle/carabatree.png \
groundpieces/ground/jungle/carabatreemedium.png \
groundpieces/ground/jungle/carabatreesmall.png \
groundpieces/ground/jungle/stick1.png \
groundpieces/ground/jungle/stick2.png \
groundpieces/ground/jungle/stick3.png \
groundpieces/ground/jungle/stick4.png \
groundpieces/ground/jungle/stick5.png \
groundpieces/ground/jungle/twist.png \
groundpieces/ground/jungle/twistsmooth.png \
groundpieces/ground/misc/bpiece1.png \
groundpieces/ground/misc/bpiece2.png \
groundpieces/ground/misc/bpiece3.png \
groundpieces/ground/misc/bpiece4.png \
groundpieces/ground/misc/bpiece5.png \
groundpieces/ground/misc/bpiece6.png \
groundpieces/ground/misc/bpiece7.png \
groundpieces/ground/misc/bpiece8.png \
groundpieces/ground/misc/bpiece9.png \
groundpieces/ground/misc/brick1.png \
groundpieces/ground/misc/brick2.png \
groundpieces/ground/misc/brick3.png \
groundpieces/ground/misc/brick4.png \
groundpieces/ground/misc/brick5.png \
groundpieces/ground/misc/bridge1.png \
groundpieces/ground/misc/bridge2.png \
groundpieces/ground/misc/column.png \
groundpieces/ground/misc/column_down.png \
groundpieces/ground/misc/column_flat.png \
groundpieces/ground/misc/column_flat_left.png \
groundpieces/ground/misc/column_flat_right.png \
groundpieces/ground/misc/column_horz.png \
groundpieces/ground/misc/column_up.png \
groundpieces/ground/misc/column_vert.png \
groundpieces/ground/misc/dragon.png \
groundpieces/ground/misc/green1.png \
groundpieces/ground/misc/green2.png \
groundpieces/ground/misc/grey_stone1.png \
groundpieces/ground/misc/grey_stone2.png \
groundpieces/ground/misc/grey_stone3.png \
groundpieces/ground/misc/grey_stone4.png \
groundpieces/ground/misc/grey_stone5.png \
groundpieces/ground/misc/grey_stone6.png \
groundpieces/ground/misc/pfosten.png \
groundpieces/ground/misc/piece1.png \
groundpieces/ground/misc/piece2.png \
groundpieces/ground/misc/spike.png \
groundpieces/ground/misc/stone0.png \
groundpieces/ground/misc/stone1.png \
groundpieces/ground/misc/stone2.png \
groundpieces/ground/misc/stone3.png \
groundpieces/ground/misc/stone4.png \
groundpieces/ground/misc/stone5.png \
groundpieces/ground/misc/stone6.png \
groundpieces/ground/misc/stone7.png \
groundpieces/ground/misc/stoneblock1.png \
groundpieces/ground/misc/stoneblock2.png \
groundpieces/ground/misc/stoneblock3.png \
groundpieces/ground/misc/stoneblock5.png \
groundpieces/ground/misc/stoneblock6.png \
groundpieces/ground/misc/tree.png \
groundpieces/ground/misc/well.png \
groundpieces/ground/misc/wood1.png \
groundpieces/ground/misc/wood2.png \
groundpieces/ground/mud/mudpiece1.png \
groundpieces/ground/mud/mudpiece2.png \
groundpieces/ground/mud/mudpiece3.png \
groundpieces/ground/mushroom/toadstool1.png \
groundpieces/ground/mushroom/toadstool2.png \
groundpieces/ground/mushroom/toadstool3.png \
groundpieces/ground/mushroom/toadstool4.png \
groundpieces/ground/ordina/cable1.png \
groundpieces/ground/ordina/cable2.png \
groundpieces/ground/ordina/cdrom1.png \
groundpieces/ground/ordina/clavier1.png \
groundpieces/ground/ordina/cpu1.png \
groundpieces/ground/ordina/ecran.png \
groundpieces/ground/ordina/sol2.png \
groundpieces/ground/ordina/sol3.png \
groundpieces/ground/ordina/sol4.png \
groundpieces/ground/real/fish.png \
groundpieces/ground/real/green1.png \
groundpieces/ground/real/green2.png \
groundpieces/ground/real/real1.png \
groundpieces/ground/real/real10.png \
groundpieces/ground/real/real11.png \
groundpieces/ground/real/real12.png \
groundpieces/ground/real/real13.png \
groundpieces/ground/real/real14.png \
groundpieces/ground/real/real15.png \
groundpieces/ground/real/real16.png \
groundpieces/ground/real/real17.png \
groundpieces/ground/real/real18.png \
groundpieces/ground/real/real19.png \
groundpieces/ground/real/real2.png \
groundpieces/ground/real/real20.png \
groundpieces/ground/real/real21.png \
groundpieces/ground/real/real22.png \
groundpieces/ground/real/real23.png \
groundpieces/ground/real/real24.png \
groundpieces/ground/real/real25.png \
groundpieces/ground/real/real26.png \
groundpieces/ground/real/real27.png \
groundpieces/ground/real/real28.png \
groundpieces/ground/real/real29.png \
groundpieces/ground/real/real3.png \
groundpieces/ground/real/real30.png \
groundpieces/ground/real/real34.png \
groundpieces/ground/real/real35.png \
groundpieces/ground/real/real36.png \
groundpieces/ground/real/real37.png \
groundpieces/ground/real/real4.png \
groundpieces/ground/real/real5.png \
groundpieces/ground/real/real6.png \
groundpieces/ground/real/real7.png \
groundpieces/ground/real/real8.png \
groundpieces/ground/real/real9.png \
groundpieces/ground/rock/blackrock1.png \
groundpieces/ground/rock/blackrock2.png \
groundpieces/ground/rock/blackrock3.png \
groundpieces/ground/rock/blackrock4.png \
groundpieces/ground/rock/stone1.png \
groundpieces/ground/signposts/arrow_down.png \
groundpieces/ground/signposts/arrow_left.png \
groundpieces/ground/signposts/arrow_right.png \
groundpieces/ground/signposts/arrow_up.png \
groundpieces/ground/signposts/danger.png \
groundpieces/ground/snow/block1.png \
groundpieces/ground/snow/block2.png \
groundpieces/ground/snow/block3.png \
groundpieces/ground/snow/block4.png \
groundpieces/ground/snow/cabin.png \
groundpieces/ground/snow/cabin_winter.png \
groundpieces/ground/snow/diablock1.png \
groundpieces/ground/snow/diablock2.png \
groundpieces/ground/snow/diablock3.png \
groundpieces/ground/snow/gpiece1.png \
groundpieces/ground/snow/groundice.png \
groundpieces/ground/snow/ice1.png \
groundpieces/ground/snow/ice2.png \
groundpieces/ground/snow/ice3.png \
groundpieces/ground/snow/iceblock1.png \
groundpieces/ground/snow/icepiece1.png \
groundpieces/ground/snow/igloo.png \
groundpieces/ground/snow/piece1.png \
groundpieces/ground/snow/piece10.png \
groundpieces/ground/snow/piece2.png \
groundpieces/ground/snow/piece3.png \
groundpieces/ground/snow/piece7.png \
groundpieces/ground/snow/piece8.png \
groundpieces/ground/snow/piece9.png \
groundpieces/ground/snow/pillar1.png \
groundpieces/ground/snow/pillar2.png \
groundpieces/ground/snow/slopedr.png \
groundpieces/ground/snow/snowball1.png \
groundpieces/ground/snow/snowman.png \
groundpieces/ground/snow/way.png \
groundpieces/ground/snow/xmas-tree.png \
groundpieces/ground/sortie/ball1.png \
groundpieces/ground/sortie/ball2.png \
groundpieces/ground/sortie/ball3.png \
groundpieces/ground/sortie/ball4.png \
groundpieces/ground/sortie/column.png \
groundpieces/ground/sortie/column2.png \
groundpieces/ground/sortie/column3.png \
groundpieces/ground/sortie/plate_forme.png \
groundpieces/ground/sortie/plate_forme_left.png \
groundpieces/ground/sortie/plate_forme_right.png \
groundpieces/ground/sortie/tentacle1.png \
groundpieces/ground/space/block1.png \
groundpieces/ground/space/diagonal.png \
groundpieces/ground/space/diagonalr.png \
groundpieces/ground/space/smallblock1.png \
groundpieces/ground/space/smallblock2.png \
groundpieces/ground/space/smallblock3.png \
groundpieces/ground/space/smalltower.png \
groundpieces/ground/space/tower1.png \
groundpieces/ground/space/way.png \
groundpieces/ground/sweets/allsort1.png \
groundpieces/ground/sweets/allsort2.png \
groundpieces/ground/sweets/aquachoc.png \
groundpieces/ground/sweets/cake1.png \
groundpieces/ground/sweets/cake2.png \
groundpieces/ground/sweets/cake3.png \
groundpieces/ground/sweets/cake4.png \
groundpieces/ground/sweets/cake5.png \
groundpieces/ground/sweets/canestalk.png \
groundpieces/ground/sweets/canestub.png \
groundpieces/ground/sweets/canetop.png \
groundpieces/ground/sweets/chocbar.png \
groundpieces/ground/sweets/chocbloc-lowleft.png \
groundpieces/ground/sweets/chocbloc-lowright.png \
groundpieces/ground/sweets/chocbloc-topleft.png \
groundpieces/ground/sweets/chocbloc-topright.png \
groundpieces/ground/sweets/chocbloc.png \
groundpieces/ground/sweets/goldchoc.png \
groundpieces/ground/sweets/greenjellybaby.png \
groundpieces/ground/sweets/icecream.png \
groundpieces/ground/sweets/jube1.png \
groundpieces/ground/sweets/jube2.png \
groundpieces/ground/sweets/lollipop-purp.png \
groundpieces/ground/sweets/lollipop.png \
groundpieces/ground/sweets/mmblue.png \
groundpieces/ground/sweets/mmbrown.png \
groundpieces/ground/sweets/mmred.png \
groundpieces/ground/sweets/mmyellow.png \
groundpieces/ground/sweets/purpchoc.png \
groundpieces/ground/sweets/purplechoc.png \
groundpieces/ground/sweets/redjellybaby.png \
groundpieces/ground/test/test1.png \
groundpieces/ground/test/test10.png \
groundpieces/ground/test/test2.png \
groundpieces/ground/test/test3.png \
groundpieces/ground/test/test4.png \
groundpieces/ground/test/test5.png \
groundpieces/ground/test/test6.png \
groundpieces/ground/test/test7.png \
groundpieces/ground/test/test8.png \
groundpieces/ground/test/test9.png \
groundpieces/remove/misc/column1.png \
groundpieces/remove/misc/dia1.png \
groundpieces/remove/misc/rect1.png \
groundpieces/remove/misc/rect2.png \
groundpieces/solid/crystal/rectsolid.png \
groundpieces/solid/crystal/smallsolid.png \
groundpieces/solid/crystal/squaresolid.png \
groundpieces/solid/desert/bigbrickpiece.png \
groundpieces/solid/desert/leftsmallbrick.png \
groundpieces/solid/desert/middlebrickpiece.png \
groundpieces/solid/desert/smallbrickpiece.png \
groundpieces/solid/industrial/greybri1.png \
groundpieces/solid/industrial/greybri2.png \
groundpieces/solid/industrial/greybri3.png \
groundpieces/solid/industrial/greybri5.png \
groundpieces/solid/industrial/joint1.png \
groundpieces/solid/industrial/joint2.png \
groundpieces/solid/industrial/joint3.png \
groundpieces/solid/industrial/joint4.png \
groundpieces/solid/industrial/joint5.png \
groundpieces/solid/industrial/rivet.png \
groundpieces/solid/industrial/screw.png \
groundpieces/solid/industrial/steel1.png \
groundpieces/solid/industrial/steel2.png \
groundpieces/solid/industrial/steel3.png \
groundpieces/solid/industrial/steel4.png \
groundpieces/solid/industrial/steel5.png \
groundpieces/solid/industrial/weld1.png \
groundpieces/solid/industrial/weld2.png \
groundpieces/solid/industrial/weld3.png \
groundpieces/solid/industrial/weld4.png \
groundpieces/solid/industrial/weld5.png \
groundpieces/solid/industrial/weld6.png \
groundpieces/solid/industrial/weld7.png \
groundpieces/solid/misc/metalplate_horiz.png \
groundpieces/solid/misc/metalplate_large.png \
groundpieces/solid/misc/metalplate_small.png \
groundpieces/solid/misc/metalplate_vert.png \
groundpieces/solid/rock/granit1.png \
groundpieces/solid/rock/granit2.png \
groundpieces/solid/rock/granit3.png \
groundpieces/solid/rock/granit4.png \
groundpieces/solid/rock/granit5.png \
groundpieces/solid/rock/granit6.png \
groundpieces/transparent/foliage/grass1.png \
groundpieces/transparent/foliage/grass10.png \
groundpieces/transparent/foliage/grass11.png \
groundpieces/transparent/foliage/grass12.png \
groundpieces/transparent/foliage/grass13.png \
groundpieces/transparent/foliage/grass14.png \
groundpieces/transparent/foliage/grass15.png \
groundpieces/transparent/foliage/grass16.png \
groundpieces/transparent/foliage/grass2.png \
groundpieces/transparent/foliage/grass3.png \
groundpieces/transparent/foliage/grass4.png \
groundpieces/transparent/foliage/grass5.png \
groundpieces/transparent/foliage/grass6.png \
groundpieces/transparent/foliage/grass7.png \
groundpieces/transparent/foliage/grass8.png \
groundpieces/transparent/foliage/grass9.png \
groundpieces/transparent/foliage/turfconcave.png \
groundpieces/transparent/foliage/turfflat.png \
groundpieces/transparent/foliage/turfslopeleft.png \
groundpieces/transparent/foliage/turfslopeleft20.png \
groundpieces/transparent/foliage/turfsloperight.png \
groundpieces/transparent/foliage/turfsloperight20.png \
groundpieces/transparent/foliage/turfsmallbump.png \
groundpieces/transparent/foliage/turfsmallnook.png \
groundpieces/transparent/foliage/turftufty.png \
groundpieces/transparent/industrial/gunge1.png \
groundpieces/transparent/industrial/gunge10.png \
groundpieces/transparent/industrial/gunge11.png \
groundpieces/transparent/industrial/gunge12.png \
groundpieces/transparent/industrial/gunge13.png \
groundpieces/transparent/industrial/gunge14.png \
groundpieces/transparent/industrial/gunge15.png \
groundpieces/transparent/industrial/gunge2.png \
groundpieces/transparent/industrial/gunge3.png \
groundpieces/transparent/industrial/gunge4.png \
groundpieces/transparent/industrial/gunge5.png \
groundpieces/transparent/industrial/gunge6.png \
groundpieces/transparent/industrial/gunge7.png \
groundpieces/transparent/industrial/gunge8.png \
groundpieces/transparent/industrial/gunge9.png \
groundpieces/transparent/misc/flower.png \
groundpieces/transparent/misc/moos1.png \
groundpieces/transparent/misc/moos2.png \
groundpieces/transparent/misc/moos3.png \
groundpieces/transparent/misc/weed1.png \
groundpieces/transparent/misc/weed2.png \
groundpieces/transparent/snow/grass1.png \
groundpieces/transparent/snow/grass2.png \
groundpieces/transparent/snow/grass3.png \
groundpieces/transparent/snow/grass4.png \
groundpieces/transparent/snow/grass5.png \
groundpieces/transparent/snow/plant1.png \
groundpieces/transparent/snow/plant2.png \
gui/checkbox_checked.png \
gui/checkbox_checked_disabled.png \
gui/checkbox_unchecked.png \
gui/checkbox_unchecked_disabled.png \
gui/font_black.png \
gui/font_gray.png \
gui/radiobutton_checked.png \
gui/radiobutton_checked_disabled.png \
gui/radiobutton_unchecked.png \
gui/radiobutton_unchecked_disabled.png \
hotspots/desert/bigdimwall.png \
hotspots/desert/mediumdimwall.png \
hotspots/desert/mediumegyptpic.png \
hotspots/desert/mediummummy.png \
hotspots/desert/mediumsphinx.png \
hotspots/desert/smallD.png \
hotspots/desert/smallE.png \
hotspots/desert/smallG.png \
hotspots/desert/smallO.png \
hotspots/desert/smalldimwall.png \
hotspots/desert/smallegyptpic.png \
hotspots/desert/smallmummy.png \
hotspots/desert/smallsphinx.png \
hotspots/misc/bridge.png \
hotspots/misc/tree.png \
hotspots/signposts/arrow_east.png \
hotspots/signposts/arrow_north.png \
hotspots/signposts/arrow_northeast.png \
hotspots/signposts/arrow_northwest.png \
hotspots/signposts/arrow_south.png \
hotspots/signposts/arrow_southeast.png \
hotspots/signposts/arrow_southwest.png \
hotspots/signposts/arrow_west.png \
hotspots/signposts/basher.png \
hotspots/signposts/blocker.png \
hotspots/signposts/bomber.png \
hotspots/signposts/bridger.png \
hotspots/signposts/climber.png \
hotspots/signposts/danger.png \
hotspots/signposts/digger.png \
hotspots/signposts/floater.png \
hotspots/signposts/miner.png \
hotspots/signposts/nogo.png \
hotspots/space/engine.png \
liquids/lava.png \
liquids/slime.png \
liquids/swater.png \
liquids/water.png \
liquids/water2.png \
liquids/water3.png \
liquids/water4.png \
liquids/water5.png \
liquids/water_cmap.png \
particles/explosive.png \
particles/ground.png \
particles/ground_snow.png \
particles/particle.png \
particles/pingu_explo.png \
particles/rain1.png \
particles/rain2.png \
particles/rain_splash.png \
particles/smoke.png \
particles/smoke2.png \
particles/snow1.png \
particles/snow2.png \
particles/snow3.png \
particles/snow4.png \
particles/snow5.png \
pingus/angel.png \
pingus/bash_radius.png \
pingus/bash_radius_gfx.png \
pingus/basher.png \
pingus/basher1.png \
pingus/basher2.png \
pingus/basher3.png \
pingus/blocker.png \
pingus/blocker1.png \
pingus/blocker2.png \
pingus/blocker3.png \
pingus/boarder.png \
pingus/bomber.png \
pingus/bomber1.png \
pingus/bomber2.png \
pingus/bomber3.png \
pingus/bomber_radius.png \
pingus/bomber_radius_gfx.png \
pingus/brick.png \
pingus/brick_left.png \
pingus/brick_right.png \
pingus/bridger.png \
pingus/bridger1.png \
pingus/bridger2.png \
pingus/bridger3.png \
pingus/bridger_build.png \
pingus/bridger_start.png \
pingus/bridger_walk.png \
pingus/climber.png \
pingus/climber1.png \
pingus/climber2.png \
pingus/climber3.png \
pingus/digger.png \
pingus/digger1.png \
pingus/digger2.png \
pingus/digger3.png \
pingus/digger_radius.png \
pingus/digger_radius_gfx.png \
pingus/drownfall.png \
pingus/drownfall1.png \
pingus/drownfall2.png \
pingus/drownfall3.png \
pingus/drownwalk.png \
pingus/exit.png \
pingus/exit1.png \
pingus/exit2.png \
pingus/exit3.png \
pingus/explo0.png \
pingus/explo1.png \
pingus/explo2.png \
pingus/explo3.png \
pingus/faller.png \
pingus/faller1.png \
pingus/faller2.png \
pingus/faller3.png \
pingus/floater.png \
pingus/floater1.png \
pingus/floater2.png \
pingus/floater3.png \
pingus/floaterlayer.png \
pingus/laser_kill.png \
pingus/miner.png \
pingus/miner1.png \
pingus/miner2.png \
pingus/miner3.png \
pingus/rocketlauncher.png \
pingus/slider.png \
pingus/splash.png \
pingus/splash_debris.png \
pingus/splat.png \
pingus/splat1.png \
pingus/splat2.png \
pingus/splat3.png \
pingus/stopper.png \
pingus/stopper1.png \
pingus/stopper2.png \
pingus/stopper3.png \
pingus/superman.png \
pingus/tumble.png \
pingus/tumble1.png \
pingus/tumble2.png \
pingus/tumble3.png \
pingus/walker.png \
pingus/walker1.png \
pingus/walker2.png \
pingus/walker3.png \
pingus/xmas-walker.png \
special/pacman/blinky.png \
special/pacman/clyde.png \
special/pacman/inky.png \
special/pacman/pacman-bkg.png \
special/pacman/pacman-frame.png \
special/pacman/pacman-maze.png \
special/pacman/pacman.png \
special/pacman/pinky.png \
story/credits1.png \
story/credits2.png \
story/credits3.png \
story/credits4.png \
story/story0.png \
story/story1.png \
story/story2.png \
story/story3.png \
story/story4.png \
story/story5.png \
story/story6.png \
textures/anim_fire.jpg \
textures/blueflame.jpg \
textures/bluestars.jpg \
textures/bwsortiebg.jpg \
textures/clouds.jpg \
textures/clouds2.jpg \
textures/clouds3.png \
textures/crystal.jpg \
textures/cyanspace.jpg \
textures/darkjungle.jpg \
textures/default.png \
textures/desert.jpg \
textures/desert_room.jpg \
textures/enchantedjungle.jpg \
textures/flamebg.jpg \
textures/fruitcaketile.jpg \
textures/green_tendrils.png \
textures/greentex.jpg \
textures/happyclouds.jpg \
textures/icetile.jpg \
textures/industrial-anim.jpg \
textures/industrial.jpg \
textures/latejungle.jpg \
textures/lunartile.jpg \
textures/mountain.png \
textures/nightjungle.jpg \
textures/ordina.jpg \
textures/rock6.jpg \
textures/rockagglo.jpg \
textures/rocktile.jpg \
textures/rooftile.jpg \
textures/rooftile2.jpg \
textures/solartile.jpg \
textures/sortie.jpg \
textures/sortiebgred.jpg \
textures/stars.jpg \
textures/stone.jpg \
textures/stones.png \
textures/thunderstorm.png \
traps/bumper.png \
traps/bumper_cmap.png \
traps/fake_exit.png \
traps/gateway.png \
traps/guillotineidle.png \
traps/guillotinekill.png \
traps/hammer.png \
traps/laser_exit.png \
traps/quicksand.png \
traps/smasher.png \
traps/smasher_cmap.png \
traps/spike.png \
traps/tut.png \
worldmaps/pacman.jpg \
worldmaps/tutorial_layer0.jpg \
worldmaps/tutorial_layer1.png \
worldmaps/tutorial_layer2.png \
worldmaps/tutorial_layer3.png \
worldmaps/volcano.jpg \
worldobjs/conveyorbelt_cmap.png \
worldobjs/conveyorbelt_left.png \
worldobjs/conveyorbelt_middle.png \
worldobjs/conveyorbelt_right.png \
worldobjs/iceblock.png \
worldobjs/iceblock_cmap.png \
worldobjs/infobox.png \
worldobjs/switchdoor_box.png \
worldobjs/switchdoor_switch.png \
worldobjs/switchdoor_tile.png \
worldobjs/switchdoor_tile_cmap.png \
worldobjs/teleporter.png \
worldobjs/teleporter2.png \
worldobjs/teleportertarget.png \
gui/font_black.tga gui/font_white.tga gui/font_gray.tga

EXTRA_DIST = $(nobase_pkgdata_DATA)

# EOF #
