#  $Id: Makefile.am,v 1.6 2000/03/20 18:58:33 grumbel Exp $
#
#  Pingus - A free Lemmings clone
#  Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
#  This program is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License
#  as published by the Free Software Foundation; either version 2
#  of the License, or (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.


## Override automake so that "make install" puts these in proper place:
pkgdatadir = $(datadir)/games/@PACKAGE@/levels

pkgdata_DATA = level1.plf  level1.psm  \
               level2.plf  level2.psm  \
               level3.plf  level3.psm  \
               level4.plf              \
               level5.plf  level5.psm  \
               level7.plf  level7.psm  \
               level8.plf  level8.psm  \
               level9.plf  level9.psm  \
               level10.plf level10.psm \
	       level11.plf level11.psm \
                                       \
	       snow1.plf   snow1.psm   \
	       snow2.plf   snow2.psm   \
               snow3.plf   snow3.psm   \
               snow4.plf   snow4.psm   \
               snow6.plf   snow6.psm   \
               block.plf   block.psm   \
               stone.plf   stone.psm   \
               rock1.plf   rock1.psm   \
               test1.plf   test1.psm   \
               foliage1.plf foliage1.psm   \
               tutorial1.plf tutorial1.psm \
               tutorial2.plf tutorial2.psm \
               space1.plf  space1.psm      \
               space2.plf  space2.psm      \
               jungle1.plf jungle1.psm     \
               jungle2.plf jungle2.psm 

EXTRA_DIST = README  \
             $(pkgdata_DATA)
