#  $Id: Makefile.am,v 1.9 2000/05/28 16:46:51 grumbel Exp $
#
#  Pingus - A free Lemmings clone
#  Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
#  This program is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License
#  as published by the Free Software Foundation; either version 2
#  of the License, or (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.


## Override automake so that "make install" puts these in proper place:
pkgdatadir = $(datadir)/games/@PACKAGE@/levels

pkgdata_DATA = Lev4.plf      foliage1.psm  level12.plf  mushroom.plf  snow4.psm    test1.psm  \
Lev4.psm      foliage3.plf  level12.psm  mushroom.psm  snow5.plf    test2.plf \
Stair.plf     foliage3.psm  level13.plf  pipes1.plf    snow5.psm    test2.psm \
Stair.psm     foliage4.plf  level13.psm  pipes1.psm    snow6.plf    test3.plf \
Wland.plf     foliage4.psm  level2.plf   rinse.plf     snow6.psm    test3.psm \
Wland.psm     granit1.plf   level2.psm   rinse.psm     sortie1.plf  test4.plf \
block.plf     granit1.psm   level3.plf   rock1.plf     sortie1.psm  test4.psm \
block.psm     jungle1.plf   level3.psm   rock1.psm     sortie2.plf  tutorial1.plf \
bombing.plf   jungle1.psm   level4.plf   small1.plf    sortie2.psm  tutorial1.psm \
bombing.psm   jungle2.plf   level5.plf   small1.psm    space1.plf   tutorial2.plf \
candy1.plf    jungle2.psm   level5.psm   snow.plf      space1.psm   tutorial2.psm  \
candy1.psm    large1.plf    level7.plf   snow.psm      space2.plf   tutorial3.plf \
crystal1.plf  large1.psm    level7.psm   snow1.plf     space2.psm   tutorial3.psm  \
crystal1.psm  level1.plf    level8.plf   snow1.psm     spot.psm     tutorial4.plf  \
crystal2.plf  level1.psm    level8.psm   snow2.plf     stone.plf    tutorial4.psm  \
crystal2.psm  level10.plf   level9.plf   snow2.psm     stone.psm    tutorial5.plf  \
crystal3.plf  level10.psm   level9.psm   snow3.plf     stone2.plf   tutorial5.psm  \
crystal3.psm  level11.plf   longway.plf  snow3.psm     stone2.psm  Particle.psm   \
foliage1.plf  level11.psm   longway.psm  snow4.plf     test1.plf Particle.plf

EXTRA_DIST = README  \
             $(pkgdata_DATA)
