# Pingus - A free Lemmings clone
# Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

pkgdatadir = $(datadir)/games/@PACKAGE@/music
EXTRA_DIST = gd-giirm.s3m   pingus-5.it  rough_journey.it \
gd-ite.it	    pingus-1.it  pingus-6.it  success_1.it \
README	     gd-matth.it    pingus-2.it  pingus-7.it  success_2.it \
gd-myla.it     pingus-3.it  pingus-8.it  the_big_march_in_space.it \
gd-cancn.it  goin_march.it  pingus-4.it  pingus-9.it
pkgdata_DATA = $(EXTRA_DIST)

# EOF #