# Pingus - A free Lemmings clone
# Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

libdir=$(prefix)/share/games/@PACKAGE@/libs

EXTRA_DIST = README

# -- Dynamic Libs --
#lib_LTLIBRARIES = libpingu_actions.la

#libpingu_actions_la_SOURCES =    \
#         basher.cc   basher.hh   \
#         blocker.cc  blocker.hh  \
#         bomber.cc   bomber.hh   \
#         bridger.cc  bridger.hh  \
#         climber.cc  climber.hh  \
#         digger.cc   digger.hh   \
#         exiter.cc   exiter.hh   \
#         floater.cc  floater.hh  \
#         miner.cc    miner.hh    \
#         smashed.cc  smashed.hh 

## libpingu_actions_la = ../GameObj.o

#noinst_LIBRARIES = libpingu_actions.a

#libpingu_actions_a_SOURCES =     \
#         bomber.cc   bomber.hh   \
#         exiter.cc   exiter.hh   \
#         smashed.cc  smashed.hh  \
#         pingu_actions.hh        \
#         pingu_actions.cc        


# -- Static Libs --
noinst_LIBRARIES = libpingu_actions.a

libpingu_actions_a_SOURCES =       \
         basher.cc   basher.hh     \
         blocker.cc  blocker.hh    \
         bomber.cc   bomber.hh     \
         bridger.cc  bridger.hh    \
         climber.cc  climber.hh    \
         digger.cc   digger.hh     \
         exiter.cc   exiter.hh     \
         floater.cc  floater.hh    \
         Jumper.cc   Jumper.hh     \
         miner.cc    miner.hh      \
         smashed.cc  smashed.hh    \
         LaserKill.cc LaserKill.hh \
         teleported.cc teleported.hh
# EOF #
