# Pingus - A free Lemmings clone
# Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

noinst_LIBRARIES = libpingus_actions.a

libpingus_actions_a_CPPFLAGS = @PINGUS_CFLAGS@
libpingus_actions_a_SOURCES =       \
         angel.cxx    angel.hxx \
         basher.cxx   basher.hxx     \
         blocker.cxx  blocker.hxx    \
         boarder.cxx  boarder.hxx \
         bomber.cxx   bomber.hxx     \
         bridger.cxx  bridger.hxx    \
         climber.cxx  climber.hxx    \
         digger.cxx   digger.hxx     \
         drown.cxx    drown.hxx \
         exiter.cxx   exiter.hxx     \
         faller.cxx   faller.hxx \
         floater.cxx  floater.hxx    \
         jumper.cxx   jumper.hxx     \
         laser_kill.cxx laser_kill.hxx \
         miner.cxx    miner.hxx      \
         rocket_launcher.cxx  rocket_launcher.hxx \
         slider.cxx   slider.hxx \
         smashed.cxx  smashed.hxx    \
         splashed.cxx splashed.hxx \
         superman.cxx superman.hxx \
         teleported.cxx teleported.hxx \
	 waiter.cxx   waiter.hxx \
         walker.cxx   walker.hxx

# EOF #
