# Pingus - A free Lemmings clone
# Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

# -- Static Libs --
noinst_LIBRARIES = libpingus_components.a

libpingus_components_a_CPPFLAGS = @PINGUS_CFLAGS@
libpingus_components_a_SOURCES = \
hurry_up.cxx \
hurry_up.hxx \
menu_button.cxx \
menu_button.hxx \
action_button.cxx \
action_button.hxx \
button_panel.cxx \
button_panel.hxx \
hurry_up.cxx \
hurry_up.hxx \
menu_button.cxx \
menu_button.hxx \
pingus_counter.cxx \
pingus_counter.hxx \
playfield.cxx \
playfield.hxx \
smallmap.cxx \
smallmap.hxx \
time_display.cxx \
time_display.hxx

# EOF #
